mi-web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mi-service
  namespace: ipl
spec:
  selector:
    app: mi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
