mi-web/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-notes-ingress
  namespace: ipl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /mi
        backend:
          service:
            name: mi-service
            port:
              number: 80
      - pathType: Prefix
        path: /notes
        backend:
          service:
            name: notes-service
            port:
              number: 8000
